# flask-messenger

./: README.md  config.ini.template  pom.xml  pyproject.toml  requirements.txt  run.py
msgs/: __init__.py  forms.py  models.py  routes.py
msgs/static/: conversation.js
msgs/templates/: base.html  conversation.html  home.html  signin.html  signup.html
rslh/: __init__.py  forms.py  models.py  routes.py
rslh/templates/: base.html  home.html  signin.html  signup.html
src/main/java/com/example/starter/: MainVerticle.java
src/main/resources/webroot/: index.html
